prvented the users from copyig the text on the dashboard

--- a/src/Style.css
+++ b/src/Style.css
@@ -106,6 +106,10 @@ select {
   position: relative;
 }
 
+.dasboardContainer{
+  user-select: none;
+}
+
 .clubCard{
   display: flex;
   align-items: center;
