--- a/src/Style.css
+++ b/src/Style.css
@@ -1182,9 +1182,34 @@ input[type="checkbox"]{
   border-radius: 5px;
 }
 
+.pendingWithdrawalInfo{
+  display: grid !important;
+  grid-template-columns: repeat(2, 1fr) !important;
+  gap: 10px !important;
+}
+
+.pendingWithdrawalInfo div{
+  display: grid !important;
+  gap: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+.pendingWithdrawalInfo h6{
+  font-size: 15px;
+  margin-bottom: 0 !important;
+}
+.pendingWithdrawalInfo p{
+  font-weight: bold;
+  margin-bottom: 0;
+  font-size: 14px;
+}
+
+.pendingStatusInfo p{
+}
+
 .positionedBookMakers p{
   margin-bottom: 0;
-  font-size: 13px;
+  font-size: 14px;
 }
 
 .positionedBookMakers{
