--- a/src/Style.css
+++ b/src/Style.css
@@ -680,6 +680,7 @@ select {
 
 .announcement p{
   margin-bottom: 0;
+  margin-top: 10px;
   font-size: 13px;
 }
 
@@ -847,12 +848,12 @@ select {
 }
 
 .noSubMsg{
-  text-align: center;
-  font-size: 22px;
+  /* text-align: center; */
+  /* font-size: 22px; */
   padding: 10px 20px;
-  box-shadow: 0rem .5rem .5rem 0rem rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
-  margin-top: 20px;
+  /* box-shadow: 0rem .5rem .5rem 0rem rgba(0, 0, 0, 0.1); */
+  /* border-radius: 8px; */
+  /* margin-top: 20px; */
 }
 
 .registrationSuccessMessage{
@@ -1563,6 +1564,7 @@ input[type="checkbox"]{
 
   .announcements{
     top: 13%;
+    width: 90%;
   }
 }
 
