--- a/src/Style.css
+++ b/src/Style.css
@@ -847,13 +847,52 @@ select {
   gap: 20px;
 }
 
+.noSubModalBg{
+  width: 100%;
+  height: 100vh;
+  background-color: #00000055;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.noSubModalMsg{
+  background-color: #fff;
+  text-align: center;
+  padding: 3rem 0 2rem;
+  width: 50%;
+  border-radius: 10px;
+  position: relative;
+}
+
+.noSubModalBg i{
+  position: absolute;
+  top: 12%;
+  cursor: pointer;
+  right: 5%;
+}
+
+.noSubModalMsg button{
+  all: unset;
+  all: unset;
+  width: 50%;
+  background: linear-gradient(to right, #21BBFE, #217EFE);
+  color: #fff;
+  padding: 7px 10px;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: .5s;
+  border: 1px solid transparent;
+}
+
 .noSubMsg{
-  /* text-align: center; */
-  /* font-size: 22px; */
   padding: 10px 20px;
-  /* box-shadow: 0rem .5rem .5rem 0rem rgba(0, 0, 0, 0.1); */
-  /* border-radius: 8px; */
-  /* margin-top: 20px; */
 }
 
 .registrationSuccessMessage{
@@ -1565,6 +1604,10 @@ input[type="checkbox"]{
   .announcements{
     top: 13%;
     width: 90%;
+  }
+
+  .noSubModalMsg{
+    width: 80%;
   }
 }
 
