--- a/src/Style.css
+++ b/src/Style.css
@@ -1315,6 +1315,27 @@ input[type="checkbox"]{
   color: #fff;
 }
 
+.addBookmakerDetailsInputDiv{
+  display: flex;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  gap: 10px;
+}
+
+.addedBookMakersDivContainer{
+  width: 70%;
+}
+
+.addedBookMakersDiv{
+  display:flex;
+  justify-content:space-between;
+  width:100%;
+  background-color:#eee;
+  margin:10px 0;
+  padding:10px 1rem;
+  border-radius:5px 
+}
+
 @media screen and (max-width:1052px) {
   .bookmakersContainer{
     grid-template-columns: repeat(3, 1fr);
@@ -1330,6 +1351,11 @@ input[type="checkbox"]{
 @media screen and (max-width:992px) {
   .arbitrageCalculator, .dasboardContainer, .paymentContainer, .profileContainer{
     margin-bottom: 5.5rem;
+  }
+
+  .addBookmakerDetailsInputDiv{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -1406,6 +1432,20 @@ input[type="checkbox"]{
 
   .userAndBalance{
     flex-direction: row-reverse;
+  }
+
+  .addedBookMakersDivContainer{
+    width: 100%;
+  }
+
+  .addBookmakerDetailsInputDiv, .addedBookMakersDiv {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .addBookmakerDetailsInputDiv input{
+    width: 100%;
   }
 }
 
