--- a/src/Style.css
+++ b/src/Style.css
@@ -710,6 +710,89 @@ a {
   right: 2%;
 }
 
+.telegramModalBg{
+  position: fixed;
+  background-color: #8b97a8df;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100vh;
+  z-index: 9999999999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.telegramModal{
+  background-color: #fff;
+  border-radius: 10px;
+  padding:1.5rem 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  text-align: center;
+}
+
+.telegramModal a{
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #344767;
+  padding: 2px 16px;
+  border-radius: 50px;
+  margin-top: 1rem;
+  gap: 5px;
+  font-size: 15px;
+  color: #344767;
+  transition: .5s;
+}
+
+.telegramModal p{
+  margin: 0;
+  color: #344767;
+}
+
+.telegramModal a:hover{
+  background-color: #344767;
+  color: #fff;
+  transition: .5s;
+}
+
+.telegramModal a:hover p{
+  transition: .5s;
+  color: #fff;
+}
+
+.telegramModal .fa-circle-xmark{
+  position: absolute;
+  font-size: 30px;
+  top: -15%;
+  right: -1%;
+  color: #344767;
+  cursor: pointer;
+}
+
+.telegramIcon{
+  position: fixed;
+  bottom: 4%;
+  right: 1%;
+  background-color: #344767;
+  color: #fff;
+  padding: 10px;
+  border-radius: 50px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.telegramIcon i{
+  font-size: 20px;
+}
+
 @media screen and (max-width:1199px){
 
   .fotter{
@@ -1649,7 +1732,7 @@ input[type="checkbox"]{
     width: 90%;
   }
 
-  .noSubModalMsg{
+  .noSubModalMsg, .telegramModal{
     width: 80%;
   }
 }
@@ -1680,6 +1763,10 @@ input[type="checkbox"]{
 
   .positionedBookMakers{
     flex-direction: column;
+  }
+
+  .telegramModal{
+    font-size: 14px;
   }
 }
 
