--- a/src/Style.css
+++ b/src/Style.css
@@ -724,6 +724,20 @@ a {
   justify-content: center;
 }
 
+.phoneNumberModalBg{
+  position: fixed;
+  background-color: #8b97a8f0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100vh;
+  z-index: 9999999999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .telegramModal, .phoneNumberModal{
   background-color: #fff;
   border-radius: 10px;
